Dark mode minor fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -27,7 +27,6 @@
 }
 
 .code {
-    color: black;
     border: 2px outset antiquewhite;
 }
 
